# ncore

./: Cargo.toml  README.md
.github/workflows/: android.yml
boot/: Cargo.toml
boot/src/: cpio.rs
cli/: Cargo.toml
cli/src/: main.rs
kmod/: Cargo.toml
kmod/src/: lib.rs
lib/: Cargo.toml  build.rs
lib/src/: error.rs  ioctl.h  jni_api.rs  lib.rs  logging.rs  utils.rs
lib/src/ctl/: ioctl.rs  mod.rs
