[package]
name = "libncore"
version = "0.1.0"
edition = "2024"

[lib]
name = "ncore"
crate-type = ["cdylib"]

[dependencies]
android-logd-logger = "0.5.0"
env_logger = "0.11.10"
jni = "0.22.4"
libc = "0.2.186"
log = "0.4.32"
rustix = { version = "1.1.4", features = ["event", "time", "fs", "process", "thread"] }
anyhow.workspace = true
thiserror = "2.0.18"

[build-dependencies]
bindgen = "0.72.1"
